# YetAnotherPlatformer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
findmods/: FindSDL2.cmake  FindSDL2_image.cmake
res/maps/: Map1.tmx
src/: animatedsprite.cpp  game.cpp  graphics.cpp  input.cpp  level.cpp  main.cpp  player.cpp  sprite.cpp  tile.cpp  tinyxml2.cpp
src/includes/: animatedsprite.h  game.h  globals.h  graphics.h  input.h  level.h  player.h  rectangle.h  slope.h  sprite.h  tile.h  utils.h
